--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Trapss.Dev</title>
 
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-    <link  rel='stylesheet' href='https://fonts.googleapis.com/css?family=Meddon'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css'>
 
     <script src="./assets/js/title.js"></script>
     <script src="https://kit.fontawesome.com/57a9c3448d.js" crossorigin="anonymous"></script>
